references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Relationship_invalid_relatedElement0.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:c97c742ccf5b2468400adffc572f287d9ad5139d07e688df2053b192e265bdba
size 1131
